Mon Aug 14 10:57:26 1995  Gray Watson  <gray@burger.letters.com>

	* Fixed up dmalloc_t to propogate errors better.  Thanks Thorsten.

Sun Aug 13 16:02:27 1995  Gray Watson  <gray@burger.letters.com>

	* Renamed chunk_heap_check to chunk_check.

Fri Jul 14 16:58:09 1995  Gray Watson  <gray@burger.letters.com>

	* Releasing version 3.1.0.  First commercial release.

	* Added academic references to permissions sections.

Wed Jul  5 19:11:03 1995  Gray Watson  <gray@burger.letters.com>

	* Released version 3.1.0-beta.

Mon Jul  3 19:57:05 1995  Gray Watson  <gray@burger.letters.com>

	* Encorporated new configed argv files from version 2.0.1.

Wed Jun 28 19:48:47 1995  Gray Watson  <gray@burger.letters.com>

	* Improved header file configurations immensely.  Removed all
        casts and other dumb coding assumptions for 64 bit machines.

	* Fixed dumb sparc preprocesser error.

Tue Jun 20 13:56:02 1995  Gray Watson  <gray@burger.letters.com>

	* Added commercial license restrictions to library.

Mon Jun 19 22:06:12 1995  Gray Watson  <gray@burger.letters.com>

	* Changed USE_ABORT to rely on ABORT_OKAY auto-configed setting.

	* Fixed problem with fence handling and 64 bit longs.

	* Added lots of comments about internal chunk structures.

Tue Jun 13 17:34:02 1995  Gray Watson  <gray@burger.letters.com>

	* pulled manual settings out of conf.h to settings.h.

Tue May 31 10:30:59 1995  Gray Watson  (gray@burger.letters.com)

	* Finished version 3.0.7.  Released later.

Tue May 30 10:30:59 1995  Gray Watson  (gray@burger.letters.com)

	* Fixed problem with conf.h references before included.

	* Fixed problems with exit() calls in configure.  Thanks Rik.

Mon May 15 20:13:10 1995  Gray Watson  (gray@burger.letters.com)

	* Added error-dump token for dumping-core and continuing on errors.

	* Added Web pointers to online documentation.

	* Added abort() auto-configuration for KILL_PROCESS.

	* Minor fixes.  Added an arg to dmalloc_die to be silent.
