@@ -1,11 +1,11 @@
 -------------------------------------------------------------------------------
-$Id: NEWS,v 1.62 1995/08/18 15:49:39 gray Exp $
+$Id: NEWS,v 1.63 1995/08/18 18:31:41 gray Exp $
 -------------------------------------------------------------------------------
 
 Version 3.1.1:
 
+	* Added better non-linear and now non-linear is a default.
 	* Fixed up dmalloc_t to propogate errors better.
-	* Renamed chunk_heap_check to chunk_check.
 
 Version 3.1.0:
 
