@@ -1,3 +1,12 @@
+Fri Aug 18 11:50:03 1995  Gray Watson  <gray@burger.letters.com>
+
+	* Located all non-linear heap checking to heap code and improved
+        immensely (read it works now).
+
+	* Fixed dumb bug in argv code.
+
+	* Added handling of NONLINEAR heap by default.
+
 Mon Aug 14 10:57:26 1995  Gray Watson  <gray@burger.letters.com>
 
 	* Fixed up dmalloc_t to propogate errors better.  Thanks Thorsten.
@@ -1031,5 +1040,5 @@ Thu Mar 12 19:28:34 1992  Gray Watson  (gray@toaster.antaire.com)
 	* Started ChangeLog.
 
 -------------------------------------------------------------------------------
-$Id: ChangeLog,v 1.157 1995/08/18 15:49:36 gray Exp $
+$Id: ChangeLog,v 1.158 1995/08/18 18:31:40 gray Exp $
 -------------------------------------------------------------------------------
